@@ -64,6 +64,7 @@ rm -rf %{buildroot}
 * Tue Mar 10 2009 Mitsutaka Amano <mamano@miraclelinux.com>
 - Renamed to netbook-lpia-moblin2-prealpha1 from netbook-lpia-moblin2. Fixed Moblin 2.0 Pre-Alpha1 yum repository.
 - Fixed typo changelog date.
+- Added new platform netbook-lpia-moblin2-alpha1.
 
 * Mon Mar 02 2009 Mitsutaka Amano <mamano@miraclelinux.com>
 - Using the genisoimage in project environment.
