@@ -1,0 +1,84 @@
+[Core]
+DESC=Fundamental fset that provide a basic console based system
+PKGS=grub passwd kernel-netbook coreutils sysvinit bash moblin-release yum which dhclient openssh-clients wireless-tools rt73usb-firmware mkinitrd moblin-config-tools openssh-server moblin-installer
+DEBUG_PKGS=gdb vim-enhanced tickless-utils oprofile
+
+[Core-Dev]
+DESC=Fset that provides a basic build env
+PKGS=gcc gcc-c++ make pkgconfig rpm-build libtool autoconf automake intltool gettext m4 ncurses-devel slang-devel zlib-devel bzip2-devel dbus-devel glibc-devel libuser-devel openssl-devel rpm-devel tar vim-enhanced build-root-config
+DEBUG_PKGS=
+DEPS=core
+
+[X]
+DESC=Fundmental fset that provides a X system
+PKGS=xorg-x11-server-Xorg libdrm mesa-libGL xorg-x11-fonts-misc xorg-x11-fonts-Type1 xorg-x11-fonts-100dpi xterm xorg-x11-xinit xorg-x11-drv-intel xorg-x11-drv-vesa
+DEBUG_PKGS=glx-utils
+DEPS=core
+
+[X-Dev]
+DESC=Fset that provides a basic build env allowing X drivers and applications development
+PKGS=xorg-x11-server-sdk xorg-x11-proto-devel libX11-devel libXrender-devel libXext-devel pixman-devel freeglut-devel mesa-libGL-devel libXdamage-devel libdrm-devel gtk2-devel
+DEBUG_PKGS=
+DEPS=core-dev x
+
+[Applications]
+DESC=Useful applications
+PKGS=firefox xterm
+DEBUG_PKGS=
+DEPS=x
+
+[Communication]
+DESC=Fset that provides communication packages
+PKGS=connman bluez-utils bluez-libs bluez-utils-alsa hal
+DEBUG_PKGS=
+DEPS=core
+
+[AppFramework]
+DESC=Installs the collection of packages that are used as an application framework for the Moblin user experience
+PKGS=clutter clutter-cairo clutter-box2d
+DEBUG_PKGS=
+DEPS=x
+CONFLICTS=appframework-devel-environment
+
+[AppFramework-Devel-Environment]
+DESC=Installs a runtime environment + development environment on the device tailored for enabling application framework developers
+PKGS=compiz compiz-devel compiz-bcop clutter-devel clutter-box2d-devel clutter-cairo-devel
+DEBUG_PKGS=
+DEPS=x core-dev x-dev applications
+CONFLICTS=app-devel-environment technology-integration-testing appframework
+
+[App-Devel-Environment]
+DESC=Installs a runtime environment + development environment on the device tailored for enabling application developers
+PKGS=user-desktop-nocomposite
+DEBUG_PKGS=
+DEPS=x core-dev x-dev appframework applications
+CONFLICTS=appframework-devel-environment technology-integration-testing
+
+[Traditional-Desktop]
+DESC=Traditional XFCE Desktop
+PKGS= xfce-utils vibrant-icon-theme moblin-gnome-theme xorg-x11-fonts-100dpi xorg-x11-fonts-Type1 liberation-fonts xfwm4 xfdesktop xfce4-taskmanager xfce4-panel xfce4-session 
+DEBUG_PKGS=
+DEPS=x applications
+CONFLICTS=app-devel-environment appframework-devel-environment technology-integration-testing
+
+[Matchbox-Desktop]
+DESC=Matchbox Desktop
+PKGS= matchbox-desktop matchbox-keyboard
+DEBUG_PKGS=
+DEPS=x
+CONFLICTS=
+
+[Technology-Integration-Testing]
+DESC=Installs all available techology components needed to showcase the Moblin user experience
+PKGS=compiz
+DEBUG_PKGS=
+DEPS=x appframework applications
+CONFLICTS=appframework-devel-environment app-devel-environment 
+
+[Package-Groups]
+DESC=Virtual FSet for Package Groups
+PKGS=
+DEBUG_PKGS=
+DEPS=
+CONFLICTS=
+
