@@ -1,0 +1,6 @@
+#!/bin/sh
+
+#desktop
+echo "WINDOWMANAGER=XFCE" >> /etc/sysconfig/desktop
+echo "AUTOLOGIN_USER=moblin" >> /etc/sysconfig/desktop
+
