@@ -67,3 +67,8 @@ target_os = ubuntu
 description = Netbook on LPIA architecture using Moblin 2.0 Core Pre-Alpha1
 package_manager = yum
 target_os = moblin2
+
+[netbook-lpia-moblin2-alpha1]
+description = Netbook on LPIA architecture using Moblin 2.0 Core Alpha1
+package_manager = yum
+target_os = moblin2
