@@ -16,8 +16,9 @@ moblin-image-creator (0.49) gaston; urgency=low
   * Using the genisoimage in project environment.
   * Renamed to netbook-lpia-moblin2-prealpha1 from netbook-lpia-moblin2. Fixed Moblin 2.0 Pre-Alpha1 yum repository. 
   * Fixed typo changelog date. 
+  * Added new platform netbook-lpia-moblin2-alpha1.
 
- -- Mitsutaka Amano <mamano@miraclelinux.com>  Tue, 10 Mar 2009 00:16:45 +0900
+ -- Mitsutaka Amano <mamano@miraclelinux.com>  Tue, 10 Mar 2009 00:27:41 +0900
 
 moblin-image-creator (0.48) gaston; urgency=low
 
